src/test/deca/context/invalid/field_double_def.deca
// Description:
//    Programme declarant une variable 2 fois.
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : The field as already been declared before.
//
// Historique:
//    cree le 19/01/2025

class A{   
   int x;
   int x;
}